--- a/app/menus/Makefile.am
+++ b/app/menus/Makefile.am
@@ -25,7 +25,8 @@ libappmenus_a_SOURCES = \
 	toolbox-menu.h
 
 
-EXTRA_DIST =
+EXTRA_DIST = \
+	makefile.msc
 
 AM_CPPFLAGS = \
 	-DG_LOG_DOMAIN=\"Gimp-Menus\"	\
