--- a/app/display/makefile.msc
+++ b/app/display/makefile.msc
@@ -40,6 +40,7 @@ OBJECTS = \
 	gimpdisplayshell-filter-dialog.obj \
 	gimpdisplayshell-handlers.obj \
 	gimpdisplayshell-layer-select.obj \
+	gimpdisplayshell-preview.obj \
 	gimpdisplayshell-render.obj \
 	gimpdisplayshell-scale.obj \
 	gimpdisplayshell-scroll.obj \
@@ -48,6 +49,7 @@ OBJECTS = \
 	gimpdisplayshell-transform.obj \
 	gimpnavigationview.obj \
 	gimpprogress.obj \
+	gimpscalecombobox.obj \
 	gimpstatusbar.obj \
 	display-enums.obj \
 
