2004-07-12  Michael Natterer  <mitch@gimp.org>
	Made the gimp-console binary compile.
	Finishes core/GUI separation and fixes bug #71514:

	* configure.in: removed the crazy-hacker warning for
	--enable-gimp-console.

	* app/Makefile.am: for gimp-console, copy app_procs.c to
	app_procs_console.c and compile it instead of app_procs.c with
	-DGIMP_CONSOLE_COMPILATION

	* app/app_procs.[ch]: added some #ifndef GIMP_CONSOLE_COMPILATION
	to skip GUI stuff for the gimp-console case.
	Renamed app_gui_libs_init() to app_libs_init(), renamed
	app_gui_abort() to app_abort() and added app_exit() so everything
	that needs #ifdefs lives here now.

	* app/main.c: changed accordingly.

	* app/gui/gui.c (gui_abort): really abort (call exit()).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13933 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/Makefile.am
+++ b/app/Makefile.am
@@ -35,8 +35,7 @@ else
 bin_PROGRAMS = gimp-2.1
 endif
 
-gimp_2_1_SOURCES = \
-	app_procs.c	\
+COMMON_SOURCES = \
 	app_procs.h	\
 	main.c		\
 	batch.c		\
@@ -49,10 +48,17 @@ gimp_2_1_SOURCES = \
 	units.h		\
 	gimp-intl.h
 
+gimp_2_1_SOURCES = \
+	$(COMMON_SOURCES)	\
+	app_procs.c
+
 EXTRA_DIST = \
 	makefile.msc	\
 	gimp.rc		\
 	wilber.ico
+
+CLEANFILES = \
+	app_procs_console.c
 
 if HAVE_GLIBC_REGEX
 REGEXREPL =
@@ -133,7 +139,17 @@ gimp_2_1_LDADD = \
 	$(REGEXREPL)
 
 if ENABLE_GIMP_CONSOLE
-gimp_console_2_1_SOURCES = $(gimp_2_1_SOURCES)
+app_procs_console.c: $(srcdir)/app_procs.c
+	cp -f $(srcdir)/app_procs.c app_procs_console.c
+
+gimp_console_2_1_SOURCES = \
+	$(COMMON_SOURCES)		\
+	app_procs_console.c
+
+gimp_console_2_1_CPPFLAGS = \
+	$(AM_CPPFLAGS)			\
+	-DGIMP_CONSOLE_COMPILATION
+
 gimp_console_2_1_LDFLAGS = $(gimp_2_1_LDFLAGS)
 
 gimp_console_2_1_LDADD = \
