2004-07-12  Michael Natterer  <mitch@gimp.org>
	* menus/toolbox-menu.xml.in: applied patch from Brion Vibber
	which adds <Toolbox>/Acquire/Paste as new. Fixes bug #147358.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13938 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/menus/toolbox-menu.xml.in
+++ b/menus/toolbox-menu.xml.in
@@ -17,7 +17,9 @@
         <separator />
         <menuitem action="dialogs-document-history" />
       </menu>
-      <menu action="file-acquire-menu" name="Acquire" />
+      <menu action="file-acquire-menu" name="Acquire">
+        <menuitem action="edit-paste-as-new" />
+      </menu>
       <separator />
       <menuitem action="dialogs-preferences" />
       <menu action="dialogs-menu" name="Dialogs">
