2004-07-13  Sven Neumann  <sven@gimp.org>
	* libgimpwidgets/gimppixmap.[ch]: declared GimpPixmap as deprecated.

	* libgimpwidgets/gimpwidgets.[ch]: ditto for gimp_pixmap_button_new().

	* plug-ins/Lighting/ChangeLog: removed outdated and unused ChangeLog.

	* plug-ins/Lighting/Makefile.am
	* plug-ins/Lighting/*.xpm: removed XPM files...

	* configure.in
	* plug-ins/Lighting/images: ... and added them as PNG images here.
	These should be redone with antialiased edges.

	* plug-ins/Lighting/lighting_stock.[ch]
	* plug-ins/Lighting/lighting_ui.c: register stock icons and use
	those instead of GimpPixmaps.

	* plug-ins/MapObject/Makefile.am
	* plug-ins/MapObject/*.xpm: removed duplicated XPM files.

	* plug-ins/MapObject/mapobject_stock.[ch]: register stock icons
	reusing the generated header from the Lighting plug-in.

	* plug-ins/MapObject/mapobject_ui.c: use them.

	* plug-ins/pagecurl/pagecurl.c: undef GIMP_DISABLE_DEPRECATED until
	GimpPixmap has been replaced here as well.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13963 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/configure.in
+++ b/configure.in
@@ -1601,6 +1601,7 @@ plug-ins/xjt/Makefile
 plug-ins/FractalExplorer/Makefile
 plug-ins/FractalExplorer/examples/Makefile
 plug-ins/Lighting/Makefile
+plug-ins/Lighting/images/Makefile
 plug-ins/MapObject/Makefile
 plug-ins/bmp/Makefile
 plug-ins/common/Makefile
