--- a/plug-ins/MapObject/Makefile.am
+++ b/plug-ins/MapObject/Makefile.am
@@ -18,16 +18,6 @@ libexecdir = $(gimpplugindir)/plug-ins
 libexec_PROGRAMS = MapObject
 
 MapObject_SOURCES = \
-	amb1.xpm		\
-	amb2.xpm		\
-	arcball.c		\
-	arcball.h		\
-	diffint1.xpm		\
-	diffint2.xpm		\
-	diffref1.xpm		\
-	diffref2.xpm		\
-	high1.xpm		\
-	high2.xpm		\
 	mapobject_apply.c	\
 	mapobject_apply.h	\
 	mapobject_image.c	\
@@ -38,10 +28,10 @@ MapObject_SOURCES = \
 	mapobject_preview.h	\
 	mapobject_shade.c	\
 	mapobject_shade.h	\
+	mapobject_stock.c	\
+	mapobject_stock.h	\
 	mapobject_ui.c		\
-	mapobject_ui.h		\
-	specref1.xpm		\
-	specref2.xpm
+	mapobject_ui.h
 
 INCLUDES = \
 	-I$(top_srcdir)	\
