--- a/plug-ins/Lighting/Makefile.am
+++ b/plug-ins/Lighting/Makefile.am
@@ -13,19 +13,13 @@ endif
 
 AM_LDFLAGS = $(mwindows)
 
+SUBDIRS = images
+
 libexecdir = $(gimpplugindir)/plug-ins
 
 libexec_PROGRAMS = Lighting
 
 Lighting_SOURCES = \
-	amb1.xpm		\
-	amb2.xpm		\
-	diffint1.xpm		\
-	diffint2.xpm		\
-	diffref1.xpm		\
-	diffref2.xpm		\
-	high1.xpm		\
-	high2.xpm		\
 	lighting_apply.c	\
 	lighting_apply.h	\
 	lighting_image.c	\
@@ -36,10 +30,10 @@ Lighting_SOURCES = \
 	lighting_preview.h	\
 	lighting_shade.c	\
 	lighting_shade.h	\
+	lighting_stock.c	\
+	lighting_stock.h	\
 	lighting_ui.c		\
-	lighting_ui.h		\
-	specref1.xpm		\
-	specref2.xpm
+	lighting_ui.h
 
 INCLUDES = \
 	-I$(top_srcdir)	\
