2004-07-13  Sven Neumann  <sven@gimp.org>
	* app/Makefile.am (unused_symbols): added
	file_open_location_dialog_show to make the scanner link again.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13964 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/devel-docs/app/Makefile.am
+++ b/devel-docs/app/Makefile.am
@@ -77,6 +77,7 @@ unused_symbols = \
 	-u $(SYMPREFIX)resize_dialog_new		\
 	-u $(SYMPREFIX)stroke_dialog_new		\
 	-u $(SYMPREFIX)file_open_dialog_show		\
+	-u $(SYMPREFIX)file_open_location_dialog_show	\
 	-u $(SYMPREFIX)file_save_dialog_show		\
 	-u $(SYMPREFIX)color_notebook_new
 
