2004-07-14  Michael Natterer  <mitch@gimp.org>
	* app/display/Makefile.am
	* app/display/gimpdisplayshell-close.[ch]: new files for
	gimp_display_shell_close() and its dialog & callback.

	* app/display/gimpdisplayshell.[ch]: removed from here.

	* app/actions/view-actions.c (view_close_view_cmd_callback):
	changed accordingly.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@13976 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/app/display/Makefile.am
+++ b/app/display/Makefile.am
@@ -32,6 +32,8 @@ libappdisplay_a_sources = \
 	gimpdisplayshell-appearance.h		\
 	gimpdisplayshell-callbacks.c		\
 	gimpdisplayshell-callbacks.h		\
+	gimpdisplayshell-close.c		\
+	gimpdisplayshell-close.h		\
 	gimpdisplayshell-cursor.c		\
 	gimpdisplayshell-cursor.h		\
 	gimpdisplayshell-dnd.c			\
